fix custom scrollbar

--- a/src/styles/custom-scrollbar.css
+++ b/src/styles/custom-scrollbar.css
@@ -1,3 +1,1 @@
-.custom-scrollbar {
-  @apply overflow-x-hidden overflow-y-auto scroll-smooth [&::-webkit-scrollbar]:w-1 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-zinc-700 [&::-webkit-scrollbar-track]:rounded-full [&::-webkit-scrollbar-track]:bg-transparent;
-}
+
